syntax="proto3";
package protos;

import "common.proto";

//神秘商店商品
message ShopGoods {
	int32 cid = 1;			//配置ID
	int32 num = 2;			//余量
}
message ShopGoodsPK {
	int32 cid = 1;			//配置ID
}

//神秘商店刷新
message ShopFlush {
    int64 uid = 1; 			// uid
	int64 lastFlush = 2;		//上次刷新时间
	int32 times = 3;			//手动刷新次数
}

//以上数据结构-------------------------------------------------//
//-------------------------------------------------------------//
//以下协议-----------------------------------------------------//

//301 使用道具(包/箱)
message ItemUse_C {
	int32 protoId = 1;//[default = 301];		//生成mapping
	int32 cid = 2;		//表ID
	int32 num = 3 ;//[default = 1];		//数量
}

//303 删除道具
message ItemDel_C {
	int32 protoId = 1;//[default = 303];		//生成mapping
	int32 cid = 2;		//表ID
	int32 num = 3 ;//[default = 1];		//数量
}

//305 读新道具
message ItemRead_C {
	int32 protoId = 1;//[default = 305];		//生成mapping
	repeated int64 sid = 2;		//
}

//311 商店购买
message ShopBuy_C {
	int32 protoId = 1;//[default = 311];		//生成mapping
	int32 cid = 3;		//商品ID
	int32 num = 4;		//数量
}
//313 VIP商店购买
message VipShopBuy_C {
	int32 protoId = 1;//[default = 313];		//生成mapping
	int32 cid = 3;		//商品ID
	int32 num = 4;		//数量
}
//315 神秘商店购买
message MysticShopBuy_C {
	int32 protoId = 1;//[default = 315];		//生成mapping
	int32 cid = 3;		//商品ID
	int32 num = 4;		//数量
}

//317 神秘商店查看
message MysticShopView_C {
	int32 protoId = 1;//[default = 317];		//生成mapping
}

//319 神秘商店刷新
message MysticShopFlush_C {
	int32 protoId = 1;//[default = 319];		//生成mapping
}

//302 使用道具(包/箱)
message ItemUse_S {
	int32 protoId = 1;//[default = 302];	//生成mapping
	int32 cid = 2;		//表ID
	int32 num = 3 ;//[default = 1];		//数量
	protos.IdNum items = 4;	//获得的物品与数量,若为空则与使用物品的CID和数量相同
}

//312 商店购买
message ShopBuy_S {
	int32 protoId = 1;//[default = 312];		//生成mapping
	int32 cid = 2;		//商品ID
	int32 num = 3;		//数量
}

//314 VIP商店购买
message VipShopBuy_S {
	int32 protoId = 1;//[default = 314];		//生成mapping
	int32 cid = 2;		//商品ID
	int32 num = 3;		//数量
}

//316 神秘商店购买
message MysticShopBuy_S {
	int32 protoId = 1;//[default = 316];		//生成mapping
	int32 cid = 2;		//商品ID
	int32 num = 3;		//数量
}


